<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.details.DetailsFragment">

        <FrameLayout
            android:id="@+id/avatarFrame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fafafa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                tools:ignore="ContentDescription"
                tools:src="@android:drawable/picture_frame" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name">

            <TextView
                android:id="@+id/stars"
                style="@style/AppTheme.Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                app:drawableStartCompat="@drawable/ic_star"
                app:drawableTint="@android:color/darker_gray"
                tools:text="123" />

            <TextView
                android:id="@+id/forks"
                style="@style/AppTheme.Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                app:drawableStartCompat="@drawable/ic_fork"
                app:drawableTint="@android:color/darker_gray"
                tools:text="123" />

            <TextView
                android:id="@+id/watchers"
                style="@style/AppTheme.Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                app:drawableStartCompat="@drawable/ic_watchers"
                app:drawableTint="@android:color/darker_gray"
                tools:text="123" />

        </LinearLayout>

        <TextView
            android:id="@+id/name"
            style="@style/AppTheme.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/avatarFrame"
            tools:text="kotlin-trending-repos-and-more" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sizeEight"
            android:layout_marginTop="@dimen/sizeSixteen"
            android:layout_marginRight="@dimen/sizeEight"
            app:cardCornerRadius="@dimen/sizeFive"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/sizeEight">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/sizeEight"
                    android:text="@string/Username"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sizeOne"
                    android:background="@color/cardview_shadow_start_color" />

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/sizeEight"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sizeEight"
            app:cardCornerRadius="@dimen/sizeFive"
            app:layout_constraintTop_toBottomOf="@+id/cardViewTitle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/sizeEight">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/sizeEight"
                    android:text="@string/project_link"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sizeOne"
                    android:background="@color/cardview_shadow_start_color" />

                <TextView
                    android:id="@+id/viewLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/sizeEight"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />


                <Button
                    android:id="@+id/btnBrowse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/sizeEight"
                    android:text="@string/open_browser" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sizeEight"
            app:cardCornerRadius="@dimen/sizeFive"
            app:layout_constraintTop_toBottomOf="@+id/cardViewLink">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/sizeEight">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/sizeEight"
                    android:text="@string/Description"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sizeOne"
                    android:background="@color/cardview_shadow_start_color" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/sizeEight"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sizeEight"
            app:cardCornerRadius="@dimen/sizeFive"
            app:layout_constraintTop_toBottomOf="@+id/cardViewDesc">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/sizeEight">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/sizeEight"
                    android:text="@string/Others"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sizeOne"
                    android:background="@color/cardview_shadow_start_color" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:padding="@dimen/sizeEight">

                    <TextView
                        android:id="@+id/create"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="5"
                        android:text="@string/created_on"
                        android:textStyle="italic"
                        app:layout_constraintEnd_toStartOf="@id/guideline"
                        app:layout_constraintTop_toBottomOf="@id/description" />

                    <TextView
                        android:id="@+id/createDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:maxLines="5"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@id/guideline"
                        app:layout_constraintTop_toTopOf="@id/create"
                        tools:text="12 Feb 2020" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:padding="@dimen/sizeEight">

                    <TextView
                        android:id="@+id/update"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="5"
                        android:text="@string/last_update"
                        android:textStyle="italic"
                        app:layout_constraintEnd_toStartOf="@id/guideline"
                        app:layout_constraintTop_toBottomOf="@id/createDate" />

                    <TextView
                        android:id="@+id/updateDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:maxLines="5"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@id/guideline"
                        app:layout_constraintTop_toTopOf="@id/update"
                        tools:text="12 Feb 2020" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:padding="@dimen/sizeEight">

                    <TextView
                        android:id="@+id/issues"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="5"
                        android:text="@string/opened_issues"
                        android:textStyle="italic"
                        app:layout_constraintEnd_toStartOf="@id/guideline"
                        app:layout_constraintTop_toBottomOf="@id/updateDate" />

                    <TextView
                        android:id="@+id/issuesOpened"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:maxLines="5"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@id/guideline"
                        app:layout_constraintTop_toTopOf="@id/issues"
                        tools:text="300" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewContributors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sizeEight"
            app:cardCornerRadius="@dimen/sizeFive"
            app:layout_constraintTop_toBottomOf="@+id/cardViewOther">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/sizeEight">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/sizeEight"
                    android:text="@string/contributors"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/sizeOne"
                    android:background="@color/cardview_shadow_start_color" />

                <TextView
                    android:id="@+id/textViewFetching"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/sizeEight"
                    android:gravity="center"
                    android:text="@string/fetching"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textStyle="italic" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewContributors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="4"
                    tools:listitem="@layout/layout_item_contributor" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>